# toronto-2-address-import

./: .env.example  .gitignore  IMPORT_PROPOSAL.md  README.md  SOURCE_DATA.md  config.toml  pyproject.toml  run.py
docs/: index.html  spike_tiles.json
docs/pilot/: index.html
docs/pilot/assets/: batch_2.osm  detail-map.js  osm.json  review-keys.js  tiles.json
docs/pilot/osm/: index.html
docs/pilot/uploads/: high-park-swansea-sw-se.csv
future-work/: README.md  maplibre.md  no-anchor-osm-buildings.md  operator-review-gaps.md  postcode-enrichment.md  postcode-from-poi-check.md
migrations/: 001_init.sql  002_conflation_tags.sql  003_review_prior_auto_approved.sql  004_matched_osm_latlon.sql  005_poi_acknowledgment.sql  006_address_class.sql  007_municipality.sql  008_range_coverage.sql  009_intra_source_duplicate.sql  010_multi_address_verdicts.sql  011_multi_address_verdicts_exported.sql
scripts/: count_entrance_addrs.py  find_buildingname_addrs.py  run_one_tile.py
t2/: audit.py  batcher.py  candidates.py  config.py  conflate.py  db.py  multi_addresses.py  multi_fixes.py  osm_client.py  osm_export.py  osm_fetch.py  osm_refresh.py  pipeline.py  ranges.py  review.py  run_for_all.py  source_db.py  spike_drive.py  static_export.py  static_export_all.py  streets.py  tag_diff.py  tiles_build.py  triples_export.py
t2/checks/: __init__.py  base.py  city_duplicate.py  conflict.py  intra_source_duplicate.py  missing_sample.py  potential_amenity.py  suffix_range.py
t2/web/: app.py  glossary.py
t2/web/static/: review-keys.js  site.css
tests/: test_tag_diff.py
(+2516 files in other folders)
