[project]
name = "toronto-2-address-import"
version = "0.1.0"
description = "Local tool to import Toronto Open Data addresses into OpenStreetMap (dev sandbox)"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
    "authlib>=1.3",
    "cryptography>=42.0",
    "tomli>=2.0; python_version<'3.11'",
    "osmium>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["t2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
